fix(ffe-searchable-dropdown-react): Added missing border on invalid searchable dropdown

--- a/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
+++ b/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
@@ -74,4 +74,8 @@
       border-top: none;
     }
   }
+  [aria-invalid='true'] {
+    border-color: @ffe-orange-fire;
+    border-style: solid;
+  }
 }
